Flexbox alignment fixed

--- a/src/index.css
+++ b/src/index.css
@@ -69,10 +69,11 @@ nav{
 	background:linear-gradient(rgb( 0, 120, 200),rgb( 0, 0, 250));
 	text-align: center;
 
+
 }
 #social>h1{
 	padding-bottom: 2%;
-	font-family: Raleway;
+	font-family: Impact;
 	/*font-weight: bold;*/
 	font-size: 40px;
 	color:white;
@@ -206,7 +207,7 @@ nav{
 	/*background:linear-gradient(rgb( 0, 0, 200),rgb( 10, 60, 255));*/
 	/*background:rgb( 0, 0, 80);*/
 	background:white;
-
+	height:100%;
 	text-align: center;
 }
 /*.details>h3,p{
@@ -226,6 +227,10 @@ nav{
 	font-weight: bold;
 
 }
+
+#team>h1{
+	font-family:Arial;
+}
 .team{
 	padding-top: 2%;
 	padding-bottom:3%;
@@ -242,8 +247,9 @@ nav{
 .team>div{
 	max-width:20%;
 	text-align: center;
-	max-height:200px;
+	height:200%;
 	padding: 0% 2%;
+	position:relative;
 	/*background:red;*/
 }
 
@@ -262,6 +268,8 @@ nav{
 	
 }*/
 
+
+
 .mem >img:hover {
 	opacity:0.3;
 	border:solid 3px blue;
@@ -272,27 +280,39 @@ nav{
 
 .mem>img{
 	border-radius: 50%;
-	height: 90%;
-	width: 80%;
+	height: 200px;
+	width: 200px;
 	z-index:600;
-	position:relative;
-	background:white;
+	position: relative;
+	background: white;
 	cursor: pointer;
 
 	/*webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */*/
     /*filter: grayscale(100%);*/
 }
 .mem>i{
-	top:-50%;
-	color:darkblue;
-
-	background:white;
-	opacity:1;
+	
+	color: darkblue;
+	position: absolute;
+	top:36%;
+	right:40%;
+	background: white;
+	opacity: 1;
 	border-radius: 10%;
-	position: relative;
-	z-index:1;
-	margin-bottom: -20%;
+	z-index: 1;
+	
 
+}
+.mem>h2{
+	color:black;
+	font-weight: bold;
+	font-size: 20px;	
+}
+
+.mem>p{
+	color:darkblue;
+	font-size:10px;
+	text-align: center;
 }
 
 
@@ -413,7 +433,7 @@ nav{
 	height:100%;
 	padding: 10px 20px;
 	display:flex;
-	justify-content: space-between;
+	justify-content: space-around;
 	color:white;
 
 }
